# testnamemaster

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  BNT.py  CONTRIBUTING.md  C_ells_plotter.ipynb  DEMO.ipynb  Dockerfile  LICENCE  LICENCE.txt  MANIFEST.in  README.md  coverage.xml  environment.yml  example_mcmc_script_for_cluster.sh  info.py  likelihood_test.ipynb  likelihood_test.py  likelihood_test.yaml  observable_plotting_notebook.ipynb  profiling.py  profiling_readme.txt  profiling_script.py  profiling_script_C_ells_ph.py  profiling_script_C_ells_ph_runoption.py  profiling_script_C_ells_ph_testphotspec.py  pytest.xml  run_cloe.py  runmcmc_photo.py  runmcmc_spectro.py  setup.cfg  setup.py
chains/: my_euclid_experiment.1.txt  my_euclid_experiment.checkpoint  my_euclid_experiment.covmat  my_euclid_experiment.input.yaml  my_euclid_experiment.progress  my_euclid_experiment.updated.dill_pickle  my_euclid_experiment.updated.yaml
cloe/: EuclidLikelihood.yaml  __init__.py  cobaya_interface.py  data.yaml  info.py  params.yaml
configs/: CG.yaml  CMBlensing-GCphot.yaml  CMBlensing-WL.yaml  CMBlensing.yaml  GCphot-ConfigurationSpace.yaml  GCphot-FourierSpace.yaml  GCphot-GCspectro-ConfigurationSpace.yaml  GCphot-GCspectro.yaml  GCphot.yaml  GCspectro-ConfigurationSpace.yaml  GCspectro-FourierSpace.yaml  GCspectro-Fourier_test.yaml  GCspectro.yaml  WL-ConfigurationSpace.yaml  WL-FourierSpace.yaml  WL-GCphot-ConfigurationSpace.yaml  WL-GCphot.yaml  WL-GCspectro-FourierSpace.yaml  WL-GCspectro.yaml  WL.yaml  __init__.py  config_default.yaml  data.yaml  (+10 more)
(+562 files in other folders)
