[aliases]
test=pytest

[build_sphinx]
all_files=1
build-dir=docs/build

[metadata]
description-file = README.md

[tool:pytest]
testpaths = likelihood
addopts =
  --verbose
  --pycodestyle
  --pydocstyle
  --cov=./
  --cov-report=term
  --cov-report=xml
  --junitxml=pytest.xml

[pycodestyle]
ignore = E121,E126,E402,W504,W605
statistics = True

[pydocstyle]
convention = numpy
add-ignore = D107,D200,D202,D400,D401
